redis-caching-chart/templates/caching_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: caching
  labels:
    istio-injection: enabled
