redis-caching-chart/templates/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: caching
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:latest
          ports:
            - containerPort: 6379
