redis-caching-chart/templates/caching_ms_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caching-ms-service
  namespace: caching
spec:
  type: NodePort
  selector:
    app: caching-ms
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 32510
