redis-caching-chart/templates/redis_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: caching
spec:
  type: NodePort
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
